# Learning-from-Demonstrations-of-Critical-Driving-Behviours-Using-DRF

./: README.md  setup.py
DRF_Simulation/DRF_Experiment/: DRFSimulationModel.hpp  DRF_Experiment.pb  DRF_Experiment.pepb  DRF_Experiment.pex  DRF_Experiment_cs.slx  Demo_AmesimPreconfiguredDynamics.pb  Demo_MostImportant.pb  replace.m  test.pb
DRF_Simulation/DRF_Experiment/Aimsun/: AimsunPlugin.xml
DRF_Simulation/DRF_Experiment/Models/: ExperimentDB.psdb  generated.md5  (+1 more)
DRF_Simulation/DRF_Experiment/simcpp/src/: CMakeLists.txt  DRFSimulationModel.cpp  DRFSimulationModel.hpp.in  Initialisation.cpp  vis.ipynb
DRF_Simulation/DRF_Experiment/simcpp/src/DRFModel/: DRFModel.cpp
DRF_Simulation/DRF_Experiment/simcpp/src/DRFModel/include/DRFModel/: DRFModel.h
DRF_Simulation/Demo_DMAPI_CreateAndChangeExperiment/: ChangeExperiment.m  CreateExperiment.m
Param_Estimation/: README.md
Param_Estimation/cle/: validators.py
Param_Estimation/dataset/: ego.py
Param_Estimation/driver/: DRFController.py  DRFModel.py  __init__.py
Param_Estimation/environment/: gym_metric_set.py
Param_Estimation/kinematic/: ackerman_perturbation.py
Param_Estimation/map/: __init__.py  map_builder.py  rasterizer_builder.py
Param_Estimation/planning/: README.md  closed_loop_test.py  config.yaml  drf_batch_validation.ipynb  drf_replace.ipynb  drf_simulation.ipynb  drf_test.ipynb  drf_train.ipynb  drf_validation.ipynb  drf_visualisation.ipynb  open_loop_test.ipynb  original_config.yaml  sim_config.yaml  sim_visualization.py  train.ipynb  urban_driver_config.yaml  visualisation_config.yaml
Param_Estimation/rasterization/: semantic_rasterizer.py
Param_Estimation/sampling/: agent_sampling.py  agent_sampling_vectorized.py
Param_Estimation/simulation/: dataset.py  unroll.py  utils.py
Param_Estimation/vectorization/: vectorizer.py  vectorizer_builder.py
(+60 files in other folders)
